fix re-render 'twitch' due to scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  overflow-y: scroll;
   height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
